--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-    <title>Search user GitHub</title>
+    <title>Search user in GitHub</title>
 </head>
 
 <body>
