--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
                     </div>
 
                 </div>
+
+                <button class="clear btn">Clear</button>
             </div>
 
         </div>
