Signed-off-by: luizh3nrique <luizh3nrique00@gmail.com>

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <div class="respostaApi">
                 <div class="header">
-                    <img id="avatar" src="">
+                    <img id="avatar" src="" draggable="false">
 
                     <div class="perfil">
 
