Signed-off-by: luizh3nrique <luizh3nrique00@gmail.com>

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
                     </div>
                 </div>
 
-                <div class="erro">Perfil não encontrado verifique e tente novamente!</div>
+                <div class="erro">
+                    <span>Perfil não encontrado verifique e tente novamente!</span>
+                    <img src="img/img-erro.png">
+                </div>
 
                 <div class="mainRespostaApi">
 
